--- a/algamoney-api/src/main/resources/application.properties
+++ b/algamoney-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/tapbeerDB?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/algamoneyAPI_DB?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=salmos89
 spring.jpa.show-sql=true
